# compoundpiece

./: .gitignore  README.md  get_web_full_text_data.py  get_web_word_data.py  get_wiktionary_data.py  mt5_metadata.csv
mc4_words/: Cargo.toml
mc4_words/src/: N_SHARDS_PER_SPLIT.json  main.rs
tokenizers/baseline/monolingual/: af.model  az.model  be.model  bg.model  bn.model  ca.model  cs.model  cy.model  da.model  de.model  el.model  en.model  eo.model  es.model  et.model  eu.model  fa.model  fi.model  fr.model  fy.model  ga.model  gl.model  gu.model  he.model  hi.model  hu.model  hy.model  id.model  is.model  it.model  ka.model  kk.model  ky.model  la.model  lt.model  lv.model  mg.model  mk.model  ml.model  mt.model  (+16 more)
tokenizers/compoundpiece/monolingual/: af.model  az.model  be.model  bg.model  bn.model  ca.model  cs.model  cy.model  da.model  de.model  el.model  en.model  eo.model  es.model  et.model  eu.model  fa.model  fi.model  fr.model  fy.model  ga.model  gl.model  gu.model  he.model  hi.model  hu.model  hy.model  id.model  is.model  it.model  ka.model  kk.model  ky.model  la.model  lt.model  lv.model  mg.model  mk.model  ml.model  mt.model  (+16 more)
word_segmentation/: train_spm.py  utils.py
word_segmentation/t5x/: data.py  extrinsic_train_baseline.sh  extrinsic_train_ours.sh  task.py  train.sh  train_flant5.sh  train_mt5.sh  train_t5.sh
word_segmentation/t5x/configs/: extrinsic_pretrain_baseline_mt5.gin  extrinsic_pretrain_our_mt5.gin  finetune.gin  finetune_byt5.gin  finetune_mt5.gin  finetune_mt5_baseline.gin  finetune_mt5_ours.gin  finetune_t5.gin  pretrain.gin  (+4 more)
