[package]
name = "mc4_words"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["blocking", "gzip", "json"] }
flate2 = "1.0.25"
lazy_static = "1.4.0"
regex = { version = "1", features = ["unicode"] }
rayon = "1.6.1"